[package]
name = "deplo"
version = "0.1.0"
authors = ["Takehiro Iyatomi <iyatomi@gmail.com>"]
edition = "2018"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envsubst = "0.2.0"
log = "0.4.8"
simple_logger = "1.6.0"
maplit = "1.0.2"