[package]
name = "deplo"
version = "0.1.0"
authors = ["Takehiro Iyatomi <iyatomi@gmail.com>"]
edition = "2018"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.6"
envsubst = "0.2.0"
log = "0.4.8"
simple_logger = "1.6.0"
maplit = "1.0.2"
lazy_static = "1.4.0"
dotenv = { git = "https://github.com/umegaya/dotenv/" }
regex = "1"
fs_extra = "1.1.0"
chrono = "0.4.11"
glob = "0.3.0"
crypto_box = "0.2.0"
rand = "0.7.3"
base64 = "0.12.2"
indexmap = { version = "1.6.0", features = ["serde-1"] }
blake2 = "0.9.0"
sodalite = { git = "https://github.com/suntomi/sodalite" }

[features]
preserve_order = []