[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
glob = "0.3.0"
log = "0.4.8"
maplit = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.6.0"
