[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
blake2 = "0.9.2"
clap = "3.0.10"
crc = "2.1.0"
dotenv = { git = "https://github.com/umegaya/dotenv/" }
jsonpath_lib = "0.3.0"
fs_extra = "1.2.0"
git2 = { version = "0.13.25", optional = true }
glob = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.8"
maplit = "1.0.2"
rand = "0.8.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.6.0"
toml = "0.5.6"
sodalite = { git = "https://github.com/suntomi/sodalite" }
tempfile = "3.2.0"

[features]
default = []
single-binary = ["use-git2", "use-hyper"]
use-git2 = ["git2"]
use-hyper = []