[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
blake2 = "0.9.2"
chrono = "0.4.40"
clap = "3.0.10"
crc = "2.1.0"
dotenv = { git = "https://github.com/suntomi/dotenv/", rev = "5d4fa11" }
jsonpath_lib = "0.3.0"
fs_extra = "1.3.0"
git2 = { version = "0.20.1", optional = true }
glob = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.8"
maplit = "1.0.2"
rand = "0.8.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.31"
simple_logger = "1.6.0"
toml = { git = "https://github.com/umegaya/toml-rs", rev = "93292f8" }
sodalite = { git = "https://github.com/suntomi/sodalite" }
tempfile = "3.19.1"
# strfmt = "0.2.2"
formatx = "0.1.4"
petgraph = { version = "0.6.2", features = ["graphmap"] }
url = "2.5.4"

[features]
default = []
single-binary = ["use-git2", "use-hyper"]
use-git2 = ["git2"]
use-hyper = []
